routing.module configurado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div>
   <app-header></app-header>
-  <img class="banner" src="../assets/img/banner.jpg" alt="" />
-  <h1>Computadoras</h1>
-  <app-card></app-card>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
